--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             height: 100vh;
             width: 100vw;
             overflow: hidden;
+            opacity: 0;
+            transition: opacity 0.5s ease;
         }
 
         .column { 
@@ -145,14 +147,14 @@
         </div>
 
         <div id="right" class="column">
-            <div class="item"><img src="work2.png" loading="eager" decoding="async"></div>
-            <div class="item"><a href="SIMPLIE.html"><img src="work4.png" loading="eager" decoding="async"></a></div>
-            <div class="item"><a href="ILES-FORMULA.html"><img src="work6.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="TRENDYOL.html"><img src="work8.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="KAA.html"><img src="work10.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="SPEEXX.html"><img src="work12.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="BASLER-BEAUTY.html"><img src="work14.png" loading="lazy" decoding="async"></a></div>
             <div class="item"><a href="ME.html"><img src="work16.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="BASLER-BEAUTY.html"><img src="work14.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="SPEEXX.html"><img src="work12.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="KAA.html"><img src="work10.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="TRENDYOL.html"><img src="work8.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="ILES-FORMULA.html"><img src="work6.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="SIMPLIE.html"><img src="work4.png" loading="eager" decoding="async"></a></div>
+            <div class="item"><img src="work2.png" loading="eager" decoding="async"></div>
         </div>
     </div>
 
@@ -201,7 +203,8 @@
 
                 const vh = window.innerHeight;
                 left.scrollTop = currentIndex * vh;
-                right.scrollTop = currentIndex * vh;
+                right.scrollTop = (itemsCount - 1 - currentIndex) * vh;
+                document.querySelector('.desktop-view').style.opacity = '1';
             };
 
             function smoothScrollTo(element, target, duration, animState) {
@@ -246,7 +249,7 @@
                         const duration = timeSinceLast < 1200 ? 800 : 2000;
                         lastScrollTime = now;
                         smoothScrollTo(left, currentIndex * vh, duration, leftAnim);
-                        smoothScrollTo(right, currentIndex * vh, duration, rightAnim);
+                        smoothScrollTo(right, (itemsCount - 1 - currentIndex) * vh, duration, rightAnim);
                     }
                     scrollAccumulator = 0;
                 }
