--- a/simplie.html
+++ b/simplie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>Simplie Hair | Lisa Voronov</title>
     <link rel="icon" type="image/png" href="Favicon.png">
@@ -29,10 +29,11 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            overflow-x: hidden;
+            overflow-y: auto; 
+            /* Плавный скролл для браузеров */
+            scroll-behavior: smooth; 
         }
 
-        /* --- ДЕСКТОП --- */
         .info-side {
             width: 50%;
             height: 100vh;
@@ -41,11 +42,15 @@
             top: 0;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: space-between;
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
             z-index: 10;
+        }
+
+        .back-link, .description, .nav-arrows, .footer-bottom {
+            font-size: 15px;
         }
 
         .back-link {
@@ -53,12 +58,10 @@
             color: #0D0D0D;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            font-size: 15px;
             line-height: 1;
         }
 
         .description {
-            font-size: 15px;
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
@@ -66,21 +69,42 @@
             text-align-last: left;
         }
 
-        .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
-
-        .left-footer { 
-            display: flex; 
-            flex-direction: column; 
-            gap: 15px; 
-            margin-top: auto; 
+        .brand-name {
+            font-family: 'Notbad Sans Bold', sans-serif;
+            font-weight: bold;
         }
 
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
+        .left-footer {
+            display: flex;
+            flex-direction: column;
+            gap: 15px; 
+        }
+
+        .nav-arrows {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 0; 
+        }
+
+        .nav-arrows a {
+            text-decoration: none;
+            color: #0D0D0D;
+            transition: opacity 0.3s;
+        }
+
         .nav-arrows a:hover { opacity: 0.5; }
 
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
+        .footer-bottom {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            line-height: 1;
+        }
+
+        .footer-bottom a {
+            color: #0D0D0D;
+            text-decoration: none;
+        }
 
         .content-side {
             width: 50%;
@@ -95,92 +119,99 @@
             width: 100%;
             display: block;
             margin-bottom: 20px;
+            /* ОПТИМИЗАЦИЯ: Подсказываем браузеру заранее готовить слой для прокрутки */
             will-change: transform;
+            /* Плавное появление при загрузке */
             animation: fadeIn 0.5s ease-in-out;
         }
 
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-
-        /* СКРЫВАЕМ МОБИЛЬНЫЕ ЭЛЕМЕНТЫ НА ДЕСКТОПЕ */
-        @media (min-width: 769px) {
-            .mobile-nav, .mobile-footer {
-                display: none !important;
-            }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
-        /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
+        .content-side img:last-child {
+            margin-bottom: 0;
+        }
+        .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
+
         @media (max-width: 768px) {
-            body { flex-direction: column; overflow-y: auto; }
-            
+            body {
+                flex-direction: column;
+            }
             .info-side {
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 40px;
-                display: block;
+                padding: 0 20px 40px;
             }
-
-            /* Скрываем десктопный футер на мобилках */
-            .info-side .left-footer { display: none !important; }
-
-            .back-link {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                background: #ffffff;
-                padding: 20px;
-                z-index: 100;
-                box-sizing: border-box;
-            }
-
             .content-side {
                 width: 100%;
                 margin-left: 0;
                 padding: 20px;
+                box-sizing: border-box;
             }
-
-            .mobile-nav { 
-                display: flex; 
-                padding: 20px; 
-                border-top: 1px solid #eee; 
-                justify-content: space-between;
-                font-size: 15px;
+            .back-link {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                display: block;
+                background: #ffffff;
+                padding: 40px 0 20px 0;
+                z-index: 100;
             }
-            .mobile-nav a { text-decoration: none; color: #0D0D0D; }
-
+            .info-side .footer-bottom {
+                display: none;
+            }
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
+            }
             .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 20px 20px 50px;
-                font-size: 14px;
+                align-items: center;
+                padding: 20px 20px 50px 20px;
+                font-size: 15px;
                 width: 100%;
                 box-sizing: border-box;
             }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
-            .description { text-align: left; margin-top: 20px; }
+            .mobile-footer a {
+                color: #0D0D0D;
+                text-decoration: none;
+            }
+            .description { 
+                text-align: left; 
+                margin-top: 0;
+            }
         }
     </style>
 </head>
 <body>
 
     <div class="info-side">
-        <a href="index.html?p=1" class="back-link">← Back to portfolio</a>
-        
         <div>
+            <a href="index.html?p=1" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
                 <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: 
                 developing multi-page workbooks and B2B brochures, designing packaging, organizing and producing 
-                product and model photo shoots.
+                product and model photo shoots, and preparing materials for print and digital use.
+                My work included concept development, layout, visual storytelling design, pre-press preparation, 
+                production control, and post-production of images for the website, e-commerce, and social media.
             </div>
         </div>
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="me.html">‹ Previous</a>
-                <a href="iles-formula.html">Next ›</a>
+                <a href="ME.html">‹ Previous</a>
+                <a href="ILES-FORMULA.html">Next ›</a>
             </div>
+
             <div class="footer-bottom">
                 <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
                 <div class="copyright">© 2026 Lisa Voronov</div>
@@ -197,8 +228,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="me.html">‹ Previous</a>
-        <a href="iles-formula.html">Next ›</a>
+        <a href="ME.html">‹ Previous</a>
+        <a href="ILES-FORMULA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
