--- a/simplie.html
+++ b/simplie.html
@@ -208,8 +208,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ME.html">‹ Previous</a>
-                <a href="ILES-FORMULA.html">Next ›</a>
+                <a href="me.html">‹ Previous</a>
+                <a href="iles-formula.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
