--- a/simplie.html
+++ b/simplie.html
@@ -228,8 +228,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="ME.html">‹ Previous</a>
-        <a href="ILES-FORMULA.html">Next ›</a>
+        <a href="me.html">‹ Previous</a>
+        <a href="iles-formula.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
